# youtube-nostr-bot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build.sh  init_db.sh  readme.md
.github/workflows/: delpoy.yaml  deploy.yml
conf/test/: conf.template
data/: Cargo.toml
data/migrations/2024-01-24-153003_video/: down.sql  up.sql
data/src/: db.rs  lib.rs  models.rs  schema.rs
nostr_wrapper/: Cargo.toml
nostr_wrapper/src/: lib.rs  publish.rs
script/: youtube_fetch.sh
src/: lib.rs
src/api/: mod.rs  rss.rs  youtube.rs
src/api_fetch/: mod.rs  rss_fetch.rs  youtube_fetch.rs
src/conf/: mod.rs
src/gpt/: mod.rs
src/nostr/: mod.rs
src/youtube/: mod.rs  rss_fetch.rs  scraper.rs  youtube_fetch.rs
youtube_bd/: .env  Cargo.toml  db.sql
youtube_bd/migrations/2024-01-23-053146_youtube_users/: down.sql  up.sql
youtube_bd/migrations/2024-01-24-153003_video/: up.sql
youtube_bd/src/: db.rs  lib.rs  models.rs  schema.rs
