workspace = { members = [ "nostr_wrapper","youtube_bd"] }
[package]
name = "youtube_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = [] }
rss = "2.0.7"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
nostr_wrapper = { path = "./nostr_wrapper" }
youtube_bd = { path = "./youtube_bd" }
nostr-sdk = "0.27"
dotenv = "0.15.0"

