workspace = { members = ["nostr_wrapper", "youtube_bd"] }
[package]
name = "youtube_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = [] }
rss = "2.0.7"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
nostr_wrapper = { path = "./nostr_wrapper" }
youtube_bd = { path = "./youtube_bd" }
nostr-sdk = "0.27"
dotenv = "0.15.0"
serde_json = "1.0.111"
serde_yaml = "0.8"
serde = { version = "1.0.195", features = ["derive"] }
sonic-rs = "0.3"
log = "0.4.14"
env_logger = { version = "0.11.1", features = [] }


[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
