workspace = { members = ["data"] }
[package]
name = "youtube_bot"
version = "0.1.0"
edition = "2021"
authors = ["XIAO YU <xyzmhx@gmail.com>"]
description = "a bot for fetch youtube video url and send to nostr"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = [] }
rss = "2.0.7"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
data = { path = "./data" }
nostr-sdk = "0.29"
dotenv = "0.15.0"
serde_json = "1.0.111"
serde_yaml = "0.9.34"
serde = { version = "1.0.195", features = ["derive"] }
sonic-rs = "0.3"
log = "0.4.14"
env_logger = { version = "0.11.1", features = [] }
async-trait = "0.1.77"
chrono = "0.4.37"
rand = "0.8.5"
