[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.34"
sonic-rs = "0.3"
log = "0.4"
