[package]
name = "nostr_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.31"
sonic-rs = "0.3"